# ChangeLog for x11-plugins/gkrellweather
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellweather/ChangeLog,v 1.36 2015/03/20 16:07:57 jlec Exp $

  20 Mar 2015; Justin Lecher <jlec@gentoo.org> gkrellweather-2.0.8.ebuild:
  Remove workaround

  20 Mar 2015; Justin Lecher <jlec@gentoo.org> -gkrellweather-2.0.7-r1.ebuild,
  -gkrellweather-2.0.7-r2.ebuild, gkrellweather-2.0.8.ebuild, metadata.xml:
  Modernize ebuild; drop old, respect CC and CFLAGS, bug #428598

  01 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #144305

*gkrellweather-2.0.8 (10 May 2011)

  10 May 2011; Jim Ramsay <lack@gentoo.org> +gkrellweather-2.0.8.ebuild,
  +files/gkrellweather-2.0.8-Move-GrabWeather.patch,
  +files/gkrellweather-2.0.8-Respect-LDFLAGS.patch:
  Bug #363593 - Version bump

*gkrellweather-2.0.7-r2 (25 Aug 2010)

  25 Aug 2010; Jim Ramsay <lack@gentoo.org> gkrellweather-2.0.7.ebuild,
  gkrellweather-2.0.7-r1.ebuild, +gkrellweather-2.0.7-r2.ebuild,
  +files/gkrellweather-2.0.7-Move-GrabWeather.patch:
  Move the GrabWeather script due to collision with x11-misc/bbweather (Bug
  #333289)

*gkrellweather-2.0.7-r1 (11 Aug 2010)

  11 Aug 2010; Jim Ramsay <lack@gentoo.org> +gkrellweather-2.0.7-r1.ebuild,
  +files/gkrellweather-2.0.7-Respect-LDFLAGS.patch:
  Add patch to respect LDFLAGS (Bug #331831)

  12 Jun 2007; Jim Ramsay <lack@gentoo.org> -gkrellweather-2.0.6.ebuild:
  Old version cleanup

  02 Jun 2007; Raúl Porcel <armin76@gentoo.org> gkrellweather-2.0.7.ebuild:
  alpha stable wrt #176144

  26 May 2007; Christian Faulhammer <opfer@gentoo.org>
  gkrellweather-2.0.7.ebuild:
  amd64 stable, bug 176144

  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gkrellweather-2.0.7.ebuild:
  ppc stable, bug #176144

  26 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gkrellweather-2.0.7.ebuild:
  Stable on sparc wrt #176144
