@@ -8,25 +8,25 @@ AUX gkrellweather-2.0.8-Respect-LDFLAGS.patch 537 SHA256 66aa262d2154db592da6720
 DIST gkrellweather-2.0.7.tgz 19968 SHA256 ad902acd0ffb8adb1f0d838e57545d1f52a31ae33711b73d28929c2786a740ca
 DIST gkrellweather-2.0.8.tgz 20227 SHA256 06236ad489151019e71bab4ba63b4b8b06d58c58890caed8b1a28fdd05cde16d SHA512 da9408ebc9518fe805d3f0dd9496b4aeb805a2ab6566b619b61fc25c91122c0ee45e2a7b804206b2ee08300309dd9b1e1c3b6605a41c594cf75fd39b58767264 WHIRLPOOL 0f37fc40c0c73d9eb1661129f36cfbef64cd14d4b4d5fe01aec5a28087f30407cb1055ab439e951d76841bf6b1fde12f234f7c6c05b0658a5c3ae499254515bb
 EBUILD gkrellweather-2.0.7.ebuild 963 SHA256 f2c9621638809c972d61316c49864704304223d781febee28ce9bd4f411a8496 SHA512 41e3cf355592369e455e361628a131640ee27eefde7316bf8b41d59239c05acaf01f48a52a145ad465ad56ad5256d1143d45d43a0fee5c5e6e58e41f1206e35b WHIRLPOOL eb7fc22ec463858e61230b79e00d975f03a8baf7f119558248de661c3e4b8b3fa0dff5d9714de0e708db5b7a6b2e363c9e444a84f86b55fe31ff133ca0c3e2c0
-EBUILD gkrellweather-2.0.8.ebuild 955 SHA256 e0183baf7978960a597a1049cc2cbc53e895ad7a7bbb5dca9f41916a71eb14a8 SHA512 a82a7b3b0db0e92be2dfefdcd999ae60b72b575bb3563384b93687fa50d29e9440c8e903cbb459202c5529d5fa7aa4caa2d1501ab750133935e4a4df0875527b WHIRLPOOL 988d7dfbecf9dc2ac8126f2e0f85177904ba5d76cab7600b638921d76ebceeabb0d20c29a89a095edd5e8decb1cec9f58ff4110a10ec1cfd70fec866b3aa3457
-MISC ChangeLog 5826 SHA256 3c1cef645bc0f12fa7b2cb4dd9a4758ad0bb1c369fbffd6d92569f31d3554acb SHA512 53e3ce90b4a51b7b0389136187ea39ea71be1b18519dba396499cc689bd9e1312414bc58148b3185281d0d1d222494a85c92bec8ce4241d010e1c8ff276a1fdb WHIRLPOOL 171103110bdb40d64eca238d8b8c601aae684eabe9bac2d22112e4637f3af3f726f2ada8803194079ded2274c6f1c9eca544546014b9950506c9b89dc26afbd9
+EBUILD gkrellweather-2.0.8.ebuild 1065 SHA256 2893802a81159ae05b952e77968a51a99fe53647ed2908cd09e1ab7c1d163db6 SHA512 cd198263264abbe146869fd06baf58eae7d46f0ab4a6ca0e35aa096df0f60c727e70f6374767e4169d7734d4056767177a116c01e7311bdb142e222b4416d9f4 WHIRLPOOL 3d3344b54c94bb80dd0ed8ff829b0f002959992b944f5b3dda45ef5933aa8279b0dcdf58ed42677ac018970b04fb2284ee898588e9864ea6db95b56f8acdd984
+MISC ChangeLog 5960 SHA256 8b6ab9b7653536004c4bb6ccee47e1b918215317b33b3b7c872e2b00e00dbdd6 SHA512 a18142879201a5017bbe848cef38b5150a13e5744db04de455ecdfe21337b7f9e08bf9ac1e6a8a20ab7dd1ca3c9c2af806416d272d3d0f0738159ae57af1ecc6 WHIRLPOOL 118c92cf9065006600cffcedea88414bb3a7e3f1307bb8a6e8316f0982bd6f503c3c9c6b8eabab629cfc2a8785f20cb875aee61b132e43af4e005a34c56b4a65
 MISC metadata.xml 167 SHA256 0b161d83e9e7cad5a69cc5c2a23a5ba0fcac0d20751516b605dc232d9a2e7284 SHA512 cde6cff04d85c5663f874c4dde361195437c9f2262e7ef300a001b55151425b264d7439640d7d19c96d855d5cdb780c75ab5261b6028e8316cfabf66beaf65d4 WHIRLPOOL 7622a694f6d3fc1bc2f7fccd6a07ebb1e2f3dd00fecff580ebb272c86916c9a3953b5db0566097fbd993318bfecde00190baaf51b96b4ab8bdb96d3ca3d0c73b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJVDEXeXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVEcXBXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirR8gP/RUJl3K9GOqIuA6Bve7lyxLo
-h9dTOWMDqXH71fjgpwyoijURcFobeG3W1IoUlUyJm1cNkWROuAgFPvfvSu2Za+cw
-bkoU3aLuhU5eypCIcE4rRN0C4+GGEYYWdi9oYfeVxK5v6ZIezokHyQVz2+zpwzVT
-yXGo81AMFxqR2vR9ZoLaZal8GmUwQZN7vOobNEksExhP6t4tCCzx3j/WSO0Nrs4N
-0XUlzMOSVmgOI9hGS/Id6NE5kAWIrakIETTziVK5aSIeX27k2Cb/G55L6QjMKBFX
-scYGTTemgI2VunW9C+/6l/ecKYo1TiORE7BYFRSW4Tv5v9U9OwPN/fJY9cmXIhPG
-mBFCzUyJ2bVMMTdWucHKKEAudPd98YkTe4lK2fT03DbMGWRdbohTB+vgT+Lyb256
-g3KHuvDtJG0liQlLb9rs3GHHDdxdp7CvIqgMZEy8OGBxxtHMBtRaPrdTXGS6/02a
-vqVftuQN/Ik/8ZyQLt/c/m1IUqNorci/pFPmaN0SiPdTJ6tFjIT6npxRXkkDmoRh
-iaG00ha3ICm5awo5ba09t74fV3NeVG6r3tGhl60llivHFJoeExWVoIrTSOGKzuOF
-UCnRjg1f32iPS8Dl9bRhYD7Js/5JnkUn/xEJB3iFf7NRF32rPJUKekGDPWX8PZky
-SY/Bg+u/MGI7nwXrU4bI
-=bUWy
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirkW8P+wcUrYFHzEr8HuNA0yGwS0Z3
+xEvOSMHqRc8xQHuX2DhFosg+/6eWcwWN3L/i0EbvMyJTaGmI0NNTf3I9tizPPCgf
+OUfKpQD6sySk62GwMZ+Fo5B56d09ATXe6pYmt1ie5F+OPC5SxLmv4ptK0h4EXLsS
+qGSnbuLdEanVT1QJw4CDK8Z1cSS6ugxyj/2yfSRdh2z4JE5DY9DXyIbRRC9K9xD+
+y681xwkr9crn5ZazFt5s5YrPeQYUphJIkIWiTVE5L2UZWt4OghVX7Wm6iDDpaWkx
++bDftIUX6X6YU/9a4fTwqMzJg/RTdpAsXl1Xf4vrliBw6ROGXojMO9mHyaW/1eIG
+vL5dDz0VzCoEO0U7uSxx/q9jkx5dldT9Et6BZsUVtRMvaACqxy+3wS2P2KXg+pVx
+T7GRm9R7yZvUvarFGwEpbg9SxtlID6qyoPXafG5I1RlA5gklVcCMOqBq8yzcA61g
+ep/njFNoNx5vULcVTWyCPQCUdJzSdc3lmh0YTv0lLhRMQQYDKeIX/BXc42C3GVKC
+Qv+R3n7otyF/nvA3rPKvO4L39IflRbetfBjL915DlJ49Rx5HiCni/gHjWB9qhDqM
+i8RH8PmsfIiWVVMjXgZzjmlketvk0V4Z5uusWVpwNNqS3JGcLkdw2Fo7w+ilF4Pd
+UbexJqzT2RlEuGvi1nT2
+=+zaq
 -----END PGP SIGNATURE-----
